주근무현황 프론트

--- a/salary/templates/salary/daily_status.html
+++ b/salary/templates/salary/daily_status.html
@@ -656,6 +656,101 @@
                     <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                     <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                   </div>
+                  <div class="tbodyDivTdTdTime tbodyT personalFlex">
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                  </div>
+                  <div class="tbodyDivTdTdTime tbodyT personalFlex">
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                  </div>
+                  <div class="tbodyDivTdTdTime tbodyT personalFlex">
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                  </div>
+                  <div class="tbodyDivTdTdTime tbodyT personalFlex">
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                  </div>
+                  <div class="tbodyDivTdTdTime tbodyT personalFlex">
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                    <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                  </div>
 
                   <div class="tbodyDivTdTdTime tbodyT personalFlex">
                     <div class="tbodyDivTdTd tbodyDivTdTdInformation td">3회</div>
