--- a/salary/templates/salary/weekly_statustwo.html
+++ b/salary/templates/salary/weekly_statustwo.html
@@ -59,10 +59,209 @@
                     <div class="theadTh th none personalFlex"></div>
                 </div>
 
-                <div class="tbody flex">
+                <div class="tbody">
                     <div class="personContainer">
-                        <div class="orderContainer"></div>
-                        <div class="ValueContainer"></div>
+                        <div class="orderContainer">
+                            <div class="orderList personalFlex">1</div>
+                            <div class="orderList personalFlex">김원탁</div>
+                            <div class="orderList ">
+                                <div class="orderListList personalFlex orderListBorder">일전체시간</div>
+                                <div class="orderListList personalFlex orderListBorder">야간근무시간</div>
+                                <div class="orderListList flex">
+                                    <div class="orderListListTitle personalFlex orderListBorderRight">휴일</div>
+                                    <div class="orderListListContent">
+                                        <div class="orderListListList personalFlex orderListBorder">8시간<br>이하</div>
+                                        <div class="orderListListList personalFlex">8시간<br>초과</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="valueContainer">
+                            <div class="totalValue flex">
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">09:00</div>
+                                <div class="totalValueDate td">09:10</div>
+                                <div class="totalValueDate td"></div>
+                                <div class="totalValueDate td">05:00</div>
+                                <div class="totalValueDate td">42:00</div>
+                                <div class="totalValueDate td">법내연장</div>
+                                <div class="totalValueDate td">10:00</div>
+                            </div>
+                            <div class="nightValue flex">
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td">03:20</div>
+                                <div class=" nightValueDate td">법외연장</div>
+                                <div class=" nightValueDate td">02:30</div>
+                            </div>
+                            <div class="holidayValue flex">
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">주휴발생여부</div>
+                                <div class=" holidayValueDate td">O</div>
+                            </div>
+                            <div class="holiday8Value flex">
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="personContainer">
+                        <div class="orderContainer">
+                            <div class="orderList personalFlex">1</div>
+                            <div class="orderList personalFlex">김원탁</div>
+                            <div class="orderList ">
+                                <div class="orderListList personalFlex orderListBorder">일전체시간</div>
+                                <div class="orderListList personalFlex orderListBorder">야간근무시간</div>
+                                <div class="orderListList flex">
+                                    <div class="orderListListTitle personalFlex orderListBorderRight">휴일</div>
+                                    <div class="orderListListContent">
+                                        <div class="orderListListList personalFlex orderListBorder">8시간<br>이하</div>
+                                        <div class="orderListListList personalFlex">8시간<br>초과</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="valueContainer">
+                            <div class="totalValue flex">
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">09:00</div>
+                                <div class="totalValueDate td">09:10</div>
+                                <div class="totalValueDate td"></div>
+                                <div class="totalValueDate td">05:00</div>
+                                <div class="totalValueDate td">42:00</div>
+                                <div class="totalValueDate td">법내연장</div>
+                                <div class="totalValueDate td">10:00</div>
+                            </div>
+                            <div class="nightValue flex">
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td">03:20</div>
+                                <div class=" nightValueDate td">법외연장</div>
+                                <div class=" nightValueDate td">02:30</div>
+                            </div>
+                            <div class="holidayValue flex">
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">주휴발생여부</div>
+                                <div class=" holidayValueDate td">O</div>
+                            </div>
+                            <div class="holiday8Value flex">
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="personContainer">
+                        <div class="orderContainer">
+                            <div class="orderList personalFlex">1</div>
+                            <div class="orderList personalFlex">김원탁</div>
+                            <div class="orderList ">
+                                <div class="orderListList personalFlex orderListBorder">일전체시간</div>
+                                <div class="orderListList personalFlex orderListBorder">야간근무시간</div>
+                                <div class="orderListList flex">
+                                    <div class="orderListListTitle personalFlex orderListBorderRight">휴일</div>
+                                    <div class="orderListListContent">
+                                        <div class="orderListListList personalFlex orderListBorder">8시간<br>이하</div>
+                                        <div class="orderListListList personalFlex">8시간<br>초과</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="valueContainer">
+                            <div class="totalValue flex">
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">08:30</div>
+                                <div class="totalValueDate td">09:00</div>
+                                <div class="totalValueDate td">09:10</div>
+                                <div class="totalValueDate td"></div>
+                                <div class="totalValueDate td">05:00</div>
+                                <div class="totalValueDate td">42:00</div>
+                                <div class="totalValueDate td">법내연장</div>
+                                <div class="totalValueDate td">10:00</div>
+                            </div>
+                            <div class="nightValue flex">
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td">00:40</div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td"></div>
+                                <div class=" nightValueDate td">03:20</div>
+                                <div class=" nightValueDate td">법외연장</div>
+                                <div class=" nightValueDate td">02:30</div>
+                            </div>
+                            <div class="holidayValue flex">
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td"></div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">05:00</div>
+                                <div class=" holidayValueDate td">주휴발생여부</div>
+                                <div class=" holidayValueDate td">O</div>
+                            </div>
+                            <div class="holiday8Value flex">
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                                <div class=" holiday8ValueDate td"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
