일일근무현황완료

--- a/salary/templates/salary/daily_status.html
+++ b/salary/templates/salary/daily_status.html
@@ -41,15 +41,13 @@
                 <div class="theadThTh theadThThImformation th">회차</div>
                 <div class="theadThTh theadThThImformation th">노선명</div>
                 <div class="theadThTh theadThThImformation th">출/퇴근</div>
-                <div class="theadThTh th">출근시간</div>
-                <div class="theadThTh th">준비시간</div>
-                <div class="theadThTh th">차고지</div>
-                <div class="theadThTh th">출발지도착</div>
-                <div class="theadThTh th">운행출발</div>
-                <div class="theadThTh th">목적지도착</div>
-                <div class="theadThTh th">차고지</div>
-                <div class="theadThTh th">마감시간</div>
-                <div class="theadThTh th">퇴근시간</div>
+                <div class="theadThTh th">차고지 도착</div>
+                <div class="theadThTh th">사전 준비 시간</div>
+                <div class="theadThTh th">출발 시간</div>
+                <div class="theadThTh th">도착 시간</div>
+                <div class="theadThTh th">차량 입고</div>
+                <div class="theadThTh th">뒷정리 완료</div>
+
                 <div class="theadThTh th theadThDetails">
                     <div class="theadThTitle personalFlex">근로내역</div>
                     <div class="theadThContent personalFlex">
@@ -86,9 +84,7 @@
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
@@ -97,44 +93,42 @@
                     </div>
 
                     <div class="tbodyDivTdTdTime tbodyT personalFlex">
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">2회</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">1회</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                     </div>
 
                     <div class="tbodyDivTdTdTime tbodyT personalFlex">
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">3회</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">1회</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">영통1</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">퇴근</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdInformation td">출근</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">05:40</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">06:23</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">07:15</div>
+
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">01:35</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:20</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
-                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">00:00</div>
                     </div>
+
+
 
 
 
