--- a/templates/base.html
+++ b/templates/base.html
@@ -193,6 +193,9 @@
                 <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">근무현황</li>
                 </a>
+                <a href="{% url 'salary:routeTime' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">노선시간표</li>
+                </a>
                 <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블</li>
                 </a>
@@ -207,6 +210,9 @@
                 </a>
                 <a href="{% url 'salary:weekly_status' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">주간근무현황</li>
+                </a>
+                <a href="{% url 'salary:weekly_statustwo' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">주간근무현황2</li>
                 </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
